--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,10 @@ dependencies {
     compile group: 'org.apache.kafka', name: 'kafka-clients', version: '2.0.0'
     compile group: 'org.apache.kafka', name: 'kafka-streams', version: '2.0.0'
     compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.11.0'
-    compile group: 'com.squareup.okhttp', name: 'okhttp', version: '2.5.0'
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.6.2'
     compile group: 'org.elasticsearch.client', name: 'elasticsearch-rest-high-level-client', version: '7.6.2'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.6'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.6'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.10'
+    compile group: 'org.json', name: 'json', version:'20090211'
 }
