--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,13 @@ repositories {
     mavenCentral()
 }
 
+task startKalka(type: Exec) {
+    commandLine './scripts/start-zookeeper.bash'
+    doLast {
+        commandLine './scripts/start-kafka.bash'
+    }
+}
+
 dependencies {
     compile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.apache.kafka', name: 'kafka-clients', version: '2.0.0'
